# FikoEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md
.github/workflows/: codeql.yml
FikoEngineEditor/: CMakeLists.txt
FikoEngineEditor/src/: EditorLayer.hpp  main.cpp
FikoEngineLib/src/: FikoEngine.hpp
FikoEngineLib/src/Application/: Application.cpp  Application.hpp  Application_impl.hpp
FikoEngineLib/src/Core/: Buffer.cpp  Buffer.hpp  Buffer.inl  Core.hpp  EngineInfo.hpp  Extent2D.hpp  FikoEngine.pch.h  Layer.hpp  LayerStack.hpp  LayerStack_impl.hpp  Log.cpp  Log.hpp  MockingMacros.hpp  Ref.cpp  Ref.hpp  Result.hpp  Timestep.cpp  Timestep.hpp  UUID.cpp  UUID.hpp  VulkanInterface.cpp  VulkanInterface.hpp  VulkanInterface_Generated_Test.hpp  VulkanInterface_impl.hpp
FikoEngineLib/src/Core/Platform/Windows/: WindowsPlatformUtils.cpp  WindowsPlatformUtils.hpp
FikoEngineLib/src/Renderer/: CommandPool.cpp  CommandPool.hpp  DebugMessanger.cpp  DebugMessanger.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  Image_impl.hpp  MemoryBuffer.cpp  MemoryBuffer.hpp  Renderer.cpp  Renderer.hpp  RendererContext.cpp  RendererContext.hpp  RendererSpec.hpp  Renderer_impl.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanSpec.hpp  Window.cpp  Window.hpp
FikoEngineLib/tests/: CMakeLists.txt  FikoEngineLib_TestsMain.cpp
FikoEngineLib/tests/Core/: FikoEngineLib_Buffer_Test.hpp  FikoEngineLib_LayerStack_Test.hpp  FikoEngineLib_Ref_Test.hpp  FikoEngineLib_Result_Test.hpp  FikoEngineLib_Timestep_Test.hpp  FikoEngineLib_UUID_Test.hpp  FikoEngineLib_VkInterfaceMocked.hpp
FikoEngineLib/tests/Renderer/: FikoEngineLib_CommandPool_Test.hpp  FikoEngineLib_GraphicsPipeline_Test.hpp  FikoEngineLib_Image_Test.hpp  FikoEngineLib_MemoryBuffer_Test.hpp  FikoEngineLib_Renderer_Test.hpp
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxLayer.hpp  main.cpp
